# osrs-price

./: .gitignore  README.md  pyproject.toml
src/osrs_price/: __init__.py  api.py  cli.py
tests/: test_cli.py
